--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,3 +36,11 @@
 <app-ng-container></app-ng-container>
 <br/>
 <br/>
+
+<h1>NgContent</h1>
+<app-ng-content>
+    <p>My name is <strong>Homer Simpson</strong>, nice to meet you.</p>
+    <p>One more beer, please!</p>
+</app-ng-content>
+<br/>
+<br/>
